# AstroWebInter

./: CMakeLists.txt  README.md  main.cpp  vertopal.com_main_image_deep_field_smacs0723-5mb_712.fits
static/html/: index.html
static/html/all_users/: index.html
static/html/components/: error.html  header.html  header_user.html  home.html  not_auth.html  permissions_denied.html
static/html/conf/: conf.js  config.ini
static/html/experiment/: index.html
static/html/home/: index.html
static/html/js/: zoom.js
static/html/js/fits/: browser.js  colormap.js  js9.js  list.js  utils.js
static/html/login/: index.html
static/html/register/: index.html
static/html/scripts/: all_users.js  check_user.js  config.js  delete.js  header.js  home.js  login.js  logout.js  register.js  render_image.js
static/html/styles/: header.css  main.css
